--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -14,12 +14,12 @@
   <div></div>
   <div class="row">
     <div class="col-xs-4">Your private key</div>
-    <div class="col-xs-4">{{ signaturePrvKey.d.toString() }}</div>
-    <div class="col-xs-4">{{ signatureModulus }}</div>
+    <div class="col-xs-4">{{signaturePrvExponent}}</div>
+    <div class="col-xs-4">{{signatureModulus}}</div>
   </div>
   <div class="row">
     <div class="col-xs-4">Your public key</div>
-    <div class="col-xs-4">{{ signauturePubExponent }}</div>
+    <div class="col-xs-4">{{signaturePubExponent}}</div>
     <div class="col-xs-4">{{ signatureModulus }}</div>
   </div>
   <h4>Note down your private key for voting!</h4>
