--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <label for="username">Username</label>
   <input type="text" class="form-control" id="username" [(ngModel)]="username">
   <label for="password">Password</label>
-  <input type="password" class="form-control" id="password" [(ngModel)]="password">
+  <input type="password" class="form-control" id="password" [(ngModel)]="password"><br>
   <button class="btn btn-success" (click)="login()">LogIn</button>
   <a [routerLink]="['/register']" class="btn btn-link">Register</a>
 </div>
