--- a/src/app/main/admin/admin.component.html
+++ b/src/app/main/admin/admin.component.html
@@ -1,3 +1,31 @@
-<p>
-  admin works!
-</p>
+<div class="container header">
+  <div class="row">
+    <div class="col-sm-4 header-option" [ngClass]="selectedPage == 'elections'? 'selected-option' : ''" (click)="selectedPage = 'elections'">
+      <p>Elections</p>
+    </div>
+    <div class="col-sm-4 header-option" [ngClass]="selectedPage == 'candidates'? 'selected-option' : ''" (click)="selectedPage = 'candidates'">
+      <p>Candidates</p>
+    </div>
+    <div class="col-sm-4 header-option" [ngClass]="selectedPage == 'users'? 'selected-option' : ''" (click)="selectedPage = 'users'">
+      <p>Users</p>
+    </div>
+  </div>
+</div>
+<div class="container main">
+  <div class="row" *ngIf="selectedPage == 'elections'">
+    <table class="table">
+      <tr>
+        <th>Election Id</th>
+        <th>Election Name</th>
+        <th>Count of candidates</th>
+      </tr>
+      <tr *ngFor="let election of elections">
+        <td>{{election.id}}</td>
+        <td>{{election.name}}</td>
+        <td>{{election.candidates.length}}</td>
+        <td><button class="btn-danger">edit</button> <button class="btn-danger">delete</button></td>
+      </tr>
+    </table>
+    <button class="btn-success" [routerLink]="['/add-election']">Add election</button>
+  </div>
+</div>
