--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -8,4 +8,4 @@
   <a [routerLink]="['/login']" class="btn btn-link">Login</a>
 </div>
 <app-voter *ngIf="user && user.role == 'voter'" [user]="user"></app-voter>
-<app-admin *ngIf="user && user.role == 'admin'"></app-admin>
+<app-admin *ngIf="user && user.role == 'admin'" [user]="user"></app-admin>
