--- a/src/app/main/admin/add-election/add-election.component.html
+++ b/src/app/main/admin/add-election/add-election.component.html
@@ -2,17 +2,27 @@
   <h1 style="text-align: center">Add election</h1>
   <div class="row">
     <div class="col-xs-offset-4 col-xs-4" style="text-align: center">
-      <label for="election-name">Election name</label>
-      <input type="text" class="form-control" id="election-name" [(ngModel)]="electionName">
+      <label for="election-name">Election name</label><br>
+      <input type="text" pInputText id="election-name" [(ngModel)]="electionName">
     </div>
   </div><br>
-  <div class="row">
+  <div class="row" style="text-align: center">
+    <label>Candidates</label><br>
+    <br>
     <div class="col-xs-offset-4 col-xs-4" style="text-align: center">
-      <label>Candidates</label><br>
-      <p-multiSelect [options]="candidates" [(ngModel)]="selectedCandidates"></p-multiSelect>
+      <span class="ui-float-label">
+        <input id="float-input" type="text" size="30" pInputText [(ngModel)]="candidateFio">
+        <label for="float-input">FIO</label>
+        <button class="btn btn-warning" (click)="addCandidate()">Add candidate</button>
+      </span>
+    </div>
+    <div class="col-xs-offset-4 col-xs-4">
+      <div *ngFor="let candidate of candidates">
+        {{candidate.fio}}
+      </div>
     </div>
   </div><br>
   <div class="row">
-    <div class="col-xs-offset-4 col-xs-4" style="text-align: center"><button class="btn-success" [disabled]="!electionName" (click)="saveElection()">SAVE</button></div>
+    <div class="col-xs-offset-4 col-xs-4" style="text-align: center"><button class="btn btn-success" [disabled]="!electionName" (click)="saveElection()">SAVE</button></div>
   </div>
 </div>
