--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,6 +4,6 @@
   <label for="password">Password</label>
   <input type="password" class="form-control" id="password" [(ngModel)]="password"><br>
   <button class="btn btn-success" (click)="login()">LogIn</button>
-  <a [routerLink]="['/register']" class="btn btn-link">Register</a>
+  <a [routerLink]="['/register']" class="btn btn-link">Sign Up</a>
 </div>
 
