--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -2,3 +2,15 @@
   background-color: #3e3e3e;
   color: white;
 }
+
+.username-area {
+  padding-left: 5px;
+}
+
+.lik-area {
+  text-align: right;
+}
+
+.img-area {
+  text-align: center;
+}
