--- a/src/app/main/voter/voter.component.css
+++ b/src/app/main/voter/voter.component.css
@@ -1,24 +1,23 @@
 .elections-list {
-  border-right: 1px solid black;
-  border-bottom: 1px solid black;
   text-align: center;
-  height: 100%;
 }
 .election-name {
-  padding: 15px 0px;
-}
-
-.election-name button {
+  border-radius: 20px;
+  margin-bottom: 10px;
+  background-color: #d9534f;
+  color: white;
   font-size: 20px;
 }
 
-.election-component {
-  text-align: center;
+.election-name:hover {
+  cursor: pointer;
+  color: lightskyblue;
 }
 
+.selected-election {
+  background-color: cornflowerblue;
+}
+
+
 .election-area {
-  background-color: white;;
-  border: 1px solid black;
-  border-radius: 10px;
-  min-height: 600px;
 }
