--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -11,7 +11,7 @@
   word-wrap: break-word;
   margin-bottom: 20px;
   background-color: aquamarine;
-  height: 100%;
+  height: 100px;
 }
 
 .key-letter {
