--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<p-messages [(value)]="messages"></p-messages>
 <div class="login-area">
   <label for="username">Username</label>
   <input type="text" class="form-control" id="username" [(ngModel)]="username">
